build: use CMAKE_CURRENT_{SOURCE,BINARY}_DIR
Instead of always giving the full project path for the source dir and
storing all artifacts in the root of the binary dir, use the
CMAKE_CURRENT_SOURCE_DIR and CMAKE_CURRENT_BINARY_DIR variables to
simplify the build.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/revpi-config/CMakeLists.txt
+++ b/revpi-config/CMakeLists.txt
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 #
-# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+# SPDX-FileCopyrightText: 2023-2024 KUNBUS GmbH
 
 install(PROGRAMS revpi-config
   DESTINATION ${CMAKE_INSTALL_BINDIR}/
@@ -10,10 +10,10 @@ set(MAN_PAGE_1 revpi-config.1)
 
 add_custom_target(
   ${MAN_PAGE_1} ALL
-  COMMAND scdoc < ${CMAKE_SOURCE_DIR}/revpi-config/${MAN_PAGE_1}.scd > ${PROJECT_BINARY_DIR}/${MAN_PAGE_1}
-  DEPENDS ${CMAKE_SOURCE_DIR}/revpi-config/${MAN_PAGE_1}.scd
+  COMMAND scdoc < ${CMAKE_CURRENT_SOURCE_DIR}/${MAN_PAGE_1}.scd > ${CMAKE_CURRENT_BINARY_DIR}/${MAN_PAGE_1}
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${MAN_PAGE_1}.scd
 )
 
-install(FILES ${PROJECT_BINARY_DIR}/${MAN_PAGE_1}
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${MAN_PAGE_1}
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man1/
 )
