build: install factory-reset files with good perms
Debian's package linter lintian keeps complaining about revpi-functions
and revpi-factory-reset.sh not being executable.

Set the executable bit on both to solve that issue.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/revpi-factory-reset/CMakeLists.txt
+++ b/revpi-factory-reset/CMakeLists.txt
@@ -22,6 +22,7 @@ configure_file(
 
 install(FILES revpi-functions
   DESTINATION ${CMAKE_INSTALL_DATADIR}/revpi/
+  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
 install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/revpi-factory-reset
@@ -30,6 +31,7 @@ install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/revpi-factory-reset
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/revpi-factory-reset.sh
   DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/profile.d/
+  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
 install(FILES revpi-factory-reset.8
