--- a/tools/revpi-set-mac.in
+++ b/tools/revpi-set-mac.in
@@ -45,7 +45,7 @@ offset_delta=0
 # bytes (needed for KS8851)
 offset_multiplier=1
 
-case $dev_type in
+case "$dev_type" in
     lan743x)
         magic='0x74A5'
         size=512
