--- a/firstboot/firstboot.service
+++ b/firstboot/firstboot.service
@@ -1,13 +1,14 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 #
-# SPDX-FileCopyrightText: 2023 KUNBUS GmbH
+# SPDX-FileCopyrightText: 2023-2024 KUNBUS GmbH
 
 [Unit]
-Description=First Boot Wizard
+Description=RevPi First Boot Wizard
 DefaultDependencies=no
 Conflicts=reboot.target shutdown.target
-After=systemd-remount-fs.service
-Before=reboot.target shutdown.target
+After=local-fs.target
+Requires=local-fs.target
+Before=sysinit.target
 ConditionPathIsReadWrite=/etc
 ConditionFirstBoot=yes
 
