--- a/revpi-factory-reset/CMakeLists.txt
+++ b/revpi-factory-reset/CMakeLists.txt
@@ -34,6 +34,14 @@ install(FILES ${CMAKE_CURRENT_BINARY_DIR}/revpi-factory-reset.sh
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
-install(FILES revpi-factory-reset.8
+set(MAN_PAGE_8 revpi-factory-reset.8)
+
+add_custom_target(
+  ${MAN_PAGE_8} ALL
+  COMMAND scdoc < ${CMAKE_CURRENT_SOURCE_DIR}/${MAN_PAGE_8}.scd > ${CMAKE_CURRENT_BINARY_DIR}/${MAN_PAGE_8}
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${MAN_PAGE_8}.scd
+)
+
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${MAN_PAGE_8}
   DESTINATION ${CMAKE_INSTALL_MANDIR}/man8/
 )
