test(factory-reset): add HAT EEPROM test
The HAT EEPROM test makes sure the following is done:

- The predefined MAC dtparam's in config.txt are removed
- A password is set and printed
- A hostname is set and printed
- The file /etc/hosts file is written correctly

Also avoid copying all the tests binaries to the build directory by
setting the path of the mock binaries to the source directory.

Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 #
-# SPDX-FileCopyrightText: 2024 KUNBUS GmbH
+# SPDX-FileCopyrightText: 2025 KUNBUS GmbH
 
 set(copy_files
 	Kyuafile
 	resize_fs_test
+	factory_reset_test
 	test_env.sh
 )
 
