feat: Remove sudoers rule for revpi-factory-reset
This deletes the 091_revpi-factory-reset file to re-enable password
prompts for future uses of revpi-factory-reset. Passwordless execution
is only allowed during the initial factory reset on first boot.

Signed-off-by: Marc Kittner <m.kittner@kunbus.com>
Signed-off-by: Thomas Böhler <t.boehler@kunbus.com>

--- a/revpi-factory-reset/revpi-factory-reset.in
+++ b/revpi-factory-reset/revpi-factory-reset.in
@@ -170,3 +170,7 @@ echo "on your RevPi!"
 
 # skip /etc/profile.d/revpi-factory-reset.sh on future logins
 true > "$SYSCONFDIR/revpi/factory-reset"
+
+# Remove sudoers rule for revpi-factory-reset.
+# Allows passwordless execution only on first boot.
+rm -f "$SYSCONFDIR/sudoers.d/051_revpi-factory-reset"
